debug generator, generate 2.2 link

--- a/templates/section_link.md.erb
+++ b/templates/section_link.md.erb
@@ -3,5 +3,6 @@ title: <%= @title %>
 permalink: <%= @permalink %>
 parent: <%= @parent %>
 nav_order: <%= @order %>
+children: <%= @children %>
 # This page exists only to add main navigation child link to section
 ---
