debug grandchild anchor links

--- a/templates/section_link.md.erb
+++ b/templates/section_link.md.erb
@@ -1,8 +1,13 @@
 ---
 title: <%= @title %>
 permalink: <%= @permalink %>
+<% if @grand_parent %>
+grand_parent: <% @grand_parent %>
+<% end %>
 parent: <%= @parent %>
 nav_order: <%= @order %>
-children: <%= @children %>
+<% if @children %>
+has_children: <%= @children %>
+<% end %>
 # This page exists only to add main navigation child link to section
 ---
