--- a/templates/section_link.md.erb
+++ b/templates/section_link.md.erb
@@ -3,7 +3,7 @@ title: <%= @title %>
 permalink: <%= @permalink %>
 parent: <%= @parent %>
 nav_order: <%= @order %>
+<% if @grand_parent %>grand_parent: <%= @grand_parent %><% end %>
 <% if @children %>has_children: <%= @children %><% end %>
-<% if @grand_parent %>grand_parent: <% @grand_parent %><% end %>
 # This page exists only to add main navigation child link to section
 ---
