update footer; add year dynamically

--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,3 +1,4 @@
-{%- if site.footer_content -%}
-  <p class="text-small text-grey-dk-100 mb-0">{{ site.footer_content }}</p>
-{%- endif -%}
+<p class="text-small text-grey-dk-100 mb-0">
+    &copy; {{ site.time | date: '%Y' }} MITRE.
+    Distributed by the <a href=\"https://github.com/PHFIC/playbook/blob/main/LICENSE\">Apache-2 license.</a>
+</p>
